maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:14: error: ')' expected but '}' found.
    			}
                        ^